# miden-name-service

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  todo.md
backend/: .gitignore  Cargo.toml
backend/masm/: deploy.masm  mns.masm
backend/src/: db.rs  error.rs  handler.rs  main.rs  serde.rs  service.rs  utils.rs
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: client.ts  layout.tsx  masm.ts  page.tsx
masm/: lookup.masm  register.masm
src/: handler.rs  main.rs  utils.rs
