[package]
name = "name-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.3"
miden-client = { version = "0.8.1", features = ["concurrent", "sqlite", "tonic", "testing"] }
miden-lib = { version = "0.8", default-features = false }
miden-objects = { version = "0.8", default-features = false }
miden-assembly = "0.13.0"
rand = "0.9.0"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
log = "0.4"
env_logger = "0.11"
lazy_static = "1.5"    
