[package]
name = "name-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.3", features = ["json"] }
miden-client = { git = "https://github.com/0xPolygonMiden/miden-client", branch = "next", features = ["concurrent", "sqlite", "tonic"] }
miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base", branch = "next"}
miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base", branch = "next"}
miden-assembly = "0.13.0"
rand = "0.9.0"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
log = "0.4"
env_logger = "0.11"
lazy_static = "1.5"    
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.33", features = ["bundled"] }
clap = { version = "4.4", features = ["derive"] }
